tests/cases/fail-named-field.stderr
error: proc-macro derive panicked
 --> $DIR/fail-named-field.rs:3:10
  |
3 | #[derive(Synonym)]
  |          ^^^^^^^
  |
  = help: message: Synonym supports only tuple structs with single unnamed field. Enums, unions and generic type parameters are not supported
