tests/cases/fail-named-field.rs
use synonym::Synonym;

#[derive(Synonym)]
#[allow(dead_code)]
pub struct Foo { _bar: u8 }

fn main() {}
